dataManager for backing up messages when offline

--- a/platformio.ini
+++ b/platformio.ini
@@ -34,8 +34,11 @@ build_flags =
 
 
 lib_deps =
- vshymanskyy/TinyGSM@^0.11.7
- https://github.com/knolleary/pubsubclient
- paulstoffregen/Time@^1.6.1
+    vshymanskyy/TinyGSM@^0.11.7
+    https://github.com/knolleary/pubsubclient
+    paulstoffregen/Time@^1.6.1
+    bblanchon/ArduinoJson@^7.0.0
+    adafruit/SdFat - Adafruit Fork@^2.2.3
+    bblanchon/StreamUtils@^1.8.0
 
 board_build.partitions = default.csv
